--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ web_modules/
 
 # Optional npm cache directory
 .npm
-
+.idea
 # Optional eslint cache
 .eslintcache
 
@@ -128,3 +128,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.eslintrc.json
