--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typeface-montserrat": "^1.1.13"
   }
